--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
 		"gatsby": "^4.0.0-next.0",
 		"gatsby-plugin-open-graph-images": "^0.1.7",
 		"gatsby-plugin-postcss": "^5.0.0-zz-next.1",
+		"gatsby-source-graphql": "^4.0.0-zz-next.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-helmet": "^6.1.0"
 	},
 	"devDependencies": {
+		"@graphql-codegen/add": "^3.1.0",
 		"@graphql-codegen/cli": "^2.2.0",
 		"@graphql-codegen/typescript": "^2.2.2",
 		"@graphql-codegen/typescript-operations": "^2.1.4",
@@ -35,6 +37,7 @@
 		"@typescript-eslint/eslint-plugin": "^4.31.2",
 		"@typescript-eslint/parser": "^4.31.2",
 		"autoprefixer": "^10.3.5",
+		"dotenv": "^8.6.0",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
