--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
 	"dependencies": {
 		"@fontsource/inter": "^4.5.0",
 		"@primer/octicons-react": "^15.2.0",
-		"gatsby": "^4.0.0-next.0",
+		"gatsby": "^3.14.0",
 		"gatsby-plugin-open-graph-images": "^0.1.7",
-		"gatsby-plugin-postcss": "^5.0.0-zz-next.1",
-		"gatsby-source-graphql": "^4.0.0-zz-next.1",
+		"gatsby-plugin-postcss": "^4.14.0",
+		"gatsby-source-graphql": "^3.14.0",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-helmet": "^6.1.0"
@@ -42,7 +42,7 @@
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-tsdoc": "^0.2.14",
-		"gatsby-plugin-react-helmet": "^5.0.0-zz-next.1",
+		"gatsby-plugin-react-helmet": "^4.14.0",
 		"postcss": "^8.3.7",
 		"prettier": "^2.4.1",
 		"prettier-plugin-jsdoc": "^0.3.24",
